  has the effect that a LP solution which satisfies all integrality conditions during the pricing loop is detected
- extended hybrid relpscost branching rule by usage of the average length of conflicts a variable appears in
- one can now write indicator constraints in LP-format

performance improvements:
- replaced some function calls in loop conditions
- in sepa_cmir.c, if mksetcoefs is invalid for delta=1 no other values of delta are tested anymore
- changed the timing of the feasibility pump in case of pricing
- removed changing of update rule to "ETA" from standard soplex update "Forrest-Tomlin" in lpi_spx.cpp
- improved memory usage in heur_octane.c

fixed bugs:
- fixed bug in SCIPlpSolveAndEval(): if fastmip and pricers enabled and objlimit was reached but CPLEX did not perform 
  the final pivot step in order to exceed the objlimit, do one additional simplex step with pricing strategy steepest 
  edge, if this doesn't suffice, turn off fastmip temporarily and solve again. Also consider solstat of the new solution.
- corrected two asserts in sepa_redcost.c (reduced costs can be negative for fixed variables - qsopt uses this)
- corrected several bugs in the Clp-interface concerning return values
- corrected bug in reader_lp.c: earlier read bounds were thrown away (implementation was not conforming to standard)
- fixed potential interface bug: time limits of 0.0 are not anymore passed to the LP solver, which may have caused errors
- fixed wrong result in check.awk, if infeasible problems are stopped in presolving
- fixed wrong use of pointer in lp.c
- fixed memory error in cons_countsols.c 
- fixed bug in SCIPsolveNode() concerning the case that the time limit was hit while solving the LP relaxation 
  of a subproblem which is already an LP (branching on pseudo solution is not possible)
- fixed wrong fixing of reading bug which was in real a writing bug in MPS format; integer variables in mps format 